<resources>
    <string name="app_name">NumeroSecret</string>
    <string name="etiquetaBenvinguda">Benvingut/da a aquesta app! \n Ara, has d\'endivinar el número secret</string>
    <string name="hintEdTxt">0-1000</string>
    <string name="endavinaBoto">Endevinar</string>
    <string name="establirComptador">Establir temps</string>
    <string name="tempsRestant">Temps restant: ---</string>
</resources>
